--- a/style/style.css
+++ b/style/style.css
@@ -191,6 +191,10 @@ nav a {
     margin-right: 43%;
 }
 
+.btn-package {
+    text-align: center;
+}
+
 
 
 
@@ -258,6 +262,7 @@ nav a {
         margin: auto;
         width: 70%;
     }
+
 }
 
 /* table */
